--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-manifest": "^4.15.0",
     "gatsby-plugin-offline": "^5.15.0",
     "gatsby-plugin-react-helmet": "^5.15.0",
+    "gatsby-plugin-sass": "^5.15.0",
     "gatsby-plugin-sharp": "^4.15.0",
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-sharp": "^4.15.0",
@@ -20,7 +21,8 @@
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet": "^6.1.0",
-    "react-swipe-button": "^1.0.1"
+    "react-swipe-button": "^1.0.1",
+    "sass": "^1.52.1"
   },
   "devDependencies": {
     "prettier": "^2.6.2"
