--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "bootstrap": "^5.1.3",
     "firebase": "^9.8.1",
     "gatsby": "^4.15.0",
     "gatsby-plugin-gatsby-cloud": "^4.15.0",
@@ -18,6 +19,7 @@
     "gatsby-transformer-sharp": "^4.15.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet": "^6.1.0",
