--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-sharp": "^4.15.0",
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-sharp": "^4.15.0",
+    "node-sass": "^6.0.1",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.4.0",
