--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "autoprefixer": "^10.4.7",
     "bootstrap": "^5.1.3",
+    "browserslist": "^4.20.3",
     "firebase": "^9.8.1",
+    "foundation-sites": "^6.7.4",
     "gatsby": "^4.15.0",
     "gatsby-plugin-gatsby-cloud": "^4.15.0",
     "gatsby-plugin-image": "^2.15.0",
     "gatsby-plugin-manifest": "^4.15.0",
     "gatsby-plugin-offline": "^5.15.0",
+    "gatsby-plugin-postcss": "^5.15.0",
     "gatsby-plugin-react-helmet": "^5.15.0",
     "gatsby-plugin-sass": "^5.15.0",
     "gatsby-plugin-sharp": "^4.15.0",
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-sharp": "^4.15.0",
     "node-sass": "^6.0.1",
+    "postcss": "^8.4.14",
+    "postcss-cli": "^9.1.0",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.4.0",
@@ -49,5 +55,9 @@
   },
   "bugs": {
     "url": "https://github.com/gatsbyjs/gatsby/issues"
-  }
+  },
+  "browserslist": [
+    "last 2 versions",
+    "not dead"
+  ]
 }
