--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@react-google-maps/api": "^2.11.9",
     "autoprefixer": "^10.4.7",
     "browserslist": "^4.20.3",
     "firebase": "^9.8.1",
