--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gatsby-plugin-sharp": "^4.15.0",
     "gatsby-source-filesystem": "^4.15.0",
     "gatsby-transformer-sharp": "^4.15.0",
+    "google-map-react": "^2.1.10",
     "node-sass": "^6.0.1",
     "postcss": "^8.4.14",
     "postcss-cli": "^9.1.0",
