--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^17.0.1",
     "react-firebase-hooks": "^5.0.3",
     "react-helmet": "^6.1.0",
+    "react-interval-hook": "^1.1.3",
     "react-swipe-button": "^1.0.1",
     "sass": "^1.52.1"
   },
